--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon start ./src/server.js",
+    "start": "node ./src/server.js",
+    "start-dev": "nodemon start ./src/server.js",
     "lint": "eslint ./"
   },
   "keywords": [],
